calss integrated with db
